istio_demo/generic-echo/samples/http/generic_echo_server-RequsetTimeouts.yaml
apiVersion: v1
kind: Service
metadata:
  name: generic-echo-server-svc
spec:
  ports:
  - name: http
    port: 8033
  selector:
    app: generic-echo-server
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: generic-echo-server-v1
  labels:
    app: generic-echo-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generic-echo-server
      version: v1
  template:
    metadata:
      labels:
        app: generic-echo-server
        version: v1
    spec:
      containers:
      - name: generic-echo-server-v1
        image: docker.io/whitewalker0506/generic_echo_server:2.0.5
        imagePullPolicy: IfNotPresent
        args: ["-c", "/etc/generic-server/conf"]
        ports:
        - containerPort: 8033
        volumeMounts:
        - name: server-conf
          mountPath: /etc/generic-server
      volumes:
      - name : server-conf
        configMap:
          name: generic-echo-server-cm1
          items:
          - key: CONF
            path: conf
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: generic-echo-server-v2
  labels:
    app: generic-echo-server
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generic-echo-server
      version: v2
  template:
    metadata:
      labels:
        app: generic-echo-server
        version: v2
    spec:
      containers:
      - name: generic-echo-server
        image: docker.io/whitewalker0506/generic_echo_server:2.0.5
        imagePullPolicy: IfNotPresent
        args: ["-c", "/etc/generic-server/conf"]
        ports:
        - containerPort: 8033
        volumeMounts:
        - name: server-conf
          mountPath: /etc/generic-server
      volumes:
      - name : server-conf
        configMap:
          name: generic-echo-server-cm2
          items:
          - key: CONF
            path: conf
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: generic-echo-server-dr
spec:
  host: generic-echo-server-svc.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: generic-echo-server-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "generic-echo-server-svc.default.svc.cluster.local"
    - 10.0.1.179
---

# Request Timeouts
# v1 負責外部流量，且設定 respond timeout 10s，delay 2s sql 回傳時間
# v2 負責 mesh 流量
# 設定 Request Timeouts 1s
# match 與 route 是同層級物件，所以撰寫時須留意順序
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: generic-echo-vsvc
spec:
  hosts: 
  - "generic-echo-server-svc.default.svc.cluster.local"
  - 10.0.1.179
  gateways:
  - generic-echo-server-gateway
  - mesh
  http:
  - match:
    - gateways:
      - generic-echo-server-gateway
    route:
      - destination:
          host: generic-echo-server-svc.default.svc.cluster.local
          subset: v1
    timeout: 1s
  - route:
    - destination:
        host: generic-echo-server-svc.default.svc.cluster.local
        subset: v2
